# derivdelay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.rst  MANIFEST.in  README.rst  cleandirs  newrelease_todo  pyproject.toml  refresh  refreshtolatest  requirements.txt  testsetup
.circleci/: config.yml
.github/workflows/: showversion.yml
derivdelay/: _version.py  filter.py  fit.py  io.py  miscmath.py  refinedelay.py  resample.py  stats.py  util.py
derivdelay/scripts/: demo.py  derivdelaydemo.py
derivdelay/tests/: runlocaltest  showdirectories  test_fastresampler.py  test_refinedelay.py  utils.py
derivdelay/workflows/: __init__.py  demo.py  derivdelaydemo.py  parser_funcs.py
docs/: conf.py  requirements.txt
